stylized: product items

--- a/src/components/UI/toCartButton/ToCartButton.module.css
+++ b/src/components/UI/toCartButton/ToCartButton.module.css
@@ -4,4 +4,8 @@
     display: flex;
     align-items: center;
     justify-content: space-evenly;
+    background: linear-gradient(114.93deg, #618967 5.11%, #72A479 94%);
+    border-radius: 10px;
+    border: none;
 }
+
