--- a/src/components/Home/Products/ProductsItems/ProductsItems.module.css
+++ b/src/components/Home/Products/ProductsItems/ProductsItems.module.css
@@ -39,6 +39,41 @@
     border-radius: 10px;
 }
 
+.item__container {
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.item__titleInfo {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.item__title {
+    font-weight: 700;
+    color: #fff;
+    font-size: 22px;
+}
+
+.item__weight {
+    font-size: 12px;
+    color:#fff;
+}
+
+.item__description {
+    color: #CFCFCF;
+    font-size: 13px;
+}
+
+.item__buyBlock {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
 .item__price {
     font-weight: 600;
     font-size: 20px;
