--- a/src/components/Home/Products/ProductsItems/ProductsItems.module.css
+++ b/src/components/Home/Products/ProductsItems/ProductsItems.module.css
@@ -37,6 +37,8 @@
     height: 385px;
     background: linear-gradient(90deg, #494544 0%, #504B4A 100%);
     border-radius: 10px;
+    overflow: hidden;
+    transition: .2s linear;
 }
 
 .item__container {
@@ -44,6 +46,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    height: 155px;
 }
 
 .item__titleInfo {
@@ -79,3 +82,26 @@
     font-size: 20px;
     color: #fff;
 }
+
+.item:hover {
+    box-shadow: 0px 30px 45px rgba(43, 40, 40, 0.6);
+}
+
+.button { 
+    width: 137px;
+    height: 44px;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    background: linear-gradient(114.93deg, #618967 5.11%, #72A479 94%);
+    border-radius: 10px;
+    border: none;
+    color: #fff;
+    font-size: 14px;
+    transition: .1s linear;
+}
+
+.button:hover {
+    box-shadow: 0px 0px 45px #618967;
+}
+
