--- a/src/components/UI/toCartButton/ToCartButton.module.css
+++ b/src/components/UI/toCartButton/ToCartButton.module.css
@@ -7,5 +7,12 @@
     background: linear-gradient(114.93deg, #618967 5.11%, #72A479 94%);
     border-radius: 10px;
     border: none;
+    color: #fff;
+    font-size: 14px;
+    transition: .1s linear;
+}
+
+.button:hover {
+    box-shadow: 0px 0px 45px #618967;
 }
 
