--- a/src/components/Home/Products/ProductsItems/ProductsItems.module.css
+++ b/src/components/Home/Products/ProductsItems/ProductsItems.module.css
@@ -28,7 +28,7 @@
 .itemsContainer {
     display: flex;
     justify-content: center;
-    gap: 16px;
+    gap: 20px;
     padding: 50px 0;
 }
 
@@ -37,8 +37,12 @@
     height: 385px;
     background: linear-gradient(90deg, #494544 0%, #504B4A 100%);
     border-radius: 10px;
-    overflow: hidden;
     transition: .2s linear;
+    position: relative;
+}
+
+.item__image {
+    border-radius: 10px 10px 0 0 ;
 }
 
 .item__container {
@@ -87,6 +91,22 @@
     box-shadow: 0px 30px 45px rgba(43, 40, 40, 0.6);
 }
 
+.item__countCart {
+    position: absolute;
+    top: -15px;
+    right: -15px;
+    width: 50px;
+    height: 50px;
+    background-color:#79B282;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    font-weight: 700;
+    font-size: 20px;
+    color: #fff;
+}
+
 .button { 
     width: 137px;
     height: 44px;
@@ -101,7 +121,18 @@
     transition: .1s linear;
 }
 
+.item__changeContainer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.buttonChangePrice {
+    width: 62px;
+    height: 44px;   
+    font-size: 24px;
+}
+
 .button:hover {
     box-shadow: 0px 0px 45px #618967;
 }
-
