--- a/src/components/Home/Products/ProductsTitle/ProductsTitle.module.css
+++ b/src/components/Home/Products/ProductsTitle/ProductsTitle.module.css
@@ -16,6 +16,22 @@
     transition: .4s linear all;
 }
 
+.nav__item_active {
+    position: relative;
+    /* text-decoration: underline; */
+}
+
+.nav__item_active::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    background-color: #618967;
+
+}
+
 .nav__item::before {
     content: '';
     position: absolute;
