--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -2,16 +2,18 @@
     background-color:#403C3B;
     width: 100%;
     height: 100px;
+    position: fixed;
+    z-index: 2;
 }
 
 .header__container {
     height: 100%;
     max-width: 1440px;
-    padding: 0 98px;
     margin: 0 auto;
-    display: flex;  
-    align-items: center;
+    display: flex;
     justify-content: center;
+    align-items:center;
+    
 }
 
 .header__block {
@@ -20,4 +22,30 @@
     align-items: center;
     gap: 30px;
     margin-right: 12.5%;
+}
+
+
+@media(max-width: 1485px) {
+    .header__container {
+        padding: 0 10px;
+    }
+}
+
+@media (max-width: 843px) {
+    .header {
+        background-color:#403C3B;
+        width: 100%;
+        height: 130px;
+    }
+
+    .header__container {
+        flex-wrap: wrap;
+    }
+
+    .logo {
+        order: 1;
+        text-align: center;
+        position: relative;
+        z-index: 2;
+    }   
 }
