--- a/src/components/Home/HomePreview/HomePreview.module.css
+++ b/src/components/Home/HomePreview/HomePreview.module.css
@@ -65,3 +65,17 @@
     font-family: "Zint", sans-serif;
     box-shadow: black 2px 2px 10px 4px; 
 }
+
+@media(max-width: 843px) {
+    .preview {
+       background-position: 30% 50%;
+    }
+    .preview__content {
+        margin: 0 auto;
+    }
+
+    .preview__title {
+        font-size: 35px;
+    }
+    
+}
