--- a/src/components/Home/Products/ProductsItems/ProductsItems.module.css
+++ b/src/components/Home/Products/ProductsItems/ProductsItems.module.css
@@ -28,6 +28,7 @@
 .itemsContainer {
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
     gap: 20px;
     padding: 50px 0;
 }
@@ -91,22 +92,6 @@
     box-shadow: 0px 30px 45px rgba(43, 40, 40, 0.6);
 }
 
-.item__countCart {
-    position: absolute;
-    top: -15px;
-    right: -15px;
-    width: 50px;
-    height: 50px;
-    background-color:#79B282;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50%;
-    font-weight: 700;
-    font-size: 20px;
-    color: #fff;
-}
-
 .button { 
     width: 137px;
     height: 44px;
@@ -135,4 +120,20 @@
 
 .button:hover {
     box-shadow: 0px 0px 45px #618967;
+}
+
+
+@media (max-width: 1480px) {
+    .productsItems__title {
+       margin-left: 15px;
+    }
+    
+}
+
+@media (max-width: 500px) {
+    .productsItems__title {
+    padding-left: 20px;
+    font-size: 26px;
+    }
+    
 }
