--- a/src/components/UI/input/Input.module.css
+++ b/src/components/UI/input/Input.module.css
@@ -3,6 +3,8 @@
     width: 555px;
     height: 52px;
     display: flex;
+    margin-left: 72px;
+    margin-right: 30px;
 }
 
 .input {
@@ -14,6 +16,7 @@
     font-size: 18px;
     border: 1px solid #676767;
     outline:none;
+    border-radius: 10px;
 }
 
 .input__location {
@@ -37,4 +40,28 @@
     position: absolute;
     right: 16px;
     cursor: pointer;
+}
+
+
+@media (max-width: 1082px) {
+    .input__block {
+        margin-left: 22px;
+        margin-right: 10px;
+    } 
+}
+
+@media (max-width: 1000px) {
+    .input__block {
+        width: 400px;
+    } 
+}
+
+
+@media (max-width: 843px) {
+    .input__block {
+       order: 3;
+       width: 100%;
+       margin-left: 0px;
+       margin-right: 0px;
+    } 
 }
