--- a/src/components/OrderPage/Delivery/PickUpChange/PickUpChange.module.scss
+++ b/src/components/OrderPage/Delivery/PickUpChange/PickUpChange.module.scss
@@ -34,3 +34,12 @@
         }
     }
 }
+
+@media (max-width: 767.98px) {
+    .form__group {
+        .select {
+            width: 100%;
+
+        }
+    }
+}
