--- a/src/components/OrderPage/ContactInfo/ContactInfo.module.scss
+++ b/src/components/OrderPage/ContactInfo/ContactInfo.module.scss
@@ -59,3 +59,25 @@
 
     }
 }
+
+@media (max-width: 767.98px) {
+    .form {
+
+        &__block {
+    
+            .form__group {
+                display: flex;
+                flex-direction: column;
+                gap: 15px;
+    
+                .input__group {
+    
+                    .input {
+                        width: 100%;
+                    }
+                }
+            }
+    
+        }
+    }
+}
