--- a/src/components/OrderPage/Delivery/Delivery.module.scss
+++ b/src/components/OrderPage/Delivery/Delivery.module.scss
@@ -1,65 +1,64 @@
-.form {
+.form__subtitle {
+    color:#fff;
+    font-weight: 700;
+    font-size: 18px;
+    margin-bottom: 30px;
+}
 
-    &__block {
-        background: linear-gradient(90deg, #494544 0%, #504B4A 100%);
-        padding: 30px;
+.form__group {
+    display: flex;
+    align-items: center;
+    gap: 15px;
+
+    .changeButtonsContainer {
+        width: 363px;
+        height: 60px;
         border-radius: 10px;
-        margin-top: 30px;
+        border: 1px solid #72A479;
+        overflow: hidden;
 
-        .form__subtitle {
-            color:#fff;
+        .changeButton {
+            width: 50%;
+            height: 100%;
+            background-color: transparent;
+            border: none;
             font-weight: 700;
-            font-size: 18px;
-            margin-bottom: 30px;
+            color: #fff;
+            font-size: 16px;
+        }
+        
+        .changeButton___checked {
+            background: linear-gradient(114.93deg, #618967 5.11%, #72A479 94%);
+        }
+    }
+    .timeBlock {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+
+        &__text {
+            color: #fff;
+            font-size: 16px;
+            font-weight: 700;
+
         }
 
-        .form__group {
-            display: flex;
-            align-items: center;
-            gap: 15px;
+    }
 
-            .changeButtonsContainer {
-                width: 363px;
-                height: 60px;
-                border-radius: 10px;
-                border: 1px solid #72A479;
-                overflow: hidden;
+    .underTitle {
+        padding-top: 30px;
+        color: #fff;
+        font-size: 16px;
+        font-weight: 700;
+    }
+}
 
-                .changeButton {
-                    width: 50%;
-                    height: 100%;
-                    background-color: transparent;
-                    border: none;
-                    font-weight: 700;
-                    color: #fff;
-                    font-size: 16px;
-                }
-                
-                .changeButton___checked {
-                    background: linear-gradient(114.93deg, #618967 5.11%, #72A479 94%);
-                }
-            }
-            .timeBlock {
-                display: flex;
-                align-items: center;
-                gap: 10px;
+@media(max-width: 767.98px) {
+    .form__group {
+        flex-wrap: wrap;
+        .changeButtonsContainer {
+            width: 100%;
 
-                &__text {
-                    color: #fff;
-                    font-size: 16px;
-                    font-weight: 700;
-
-                }
-
-            }
-
-            .underTitle {
-                padding-top: 30px;
-                color: #fff;
-                font-size: 16px;
-                font-weight: 700;
-            }
         }
-
     }
 }
