--- a/src/components/OrderPage/Delivery/DeliveryChange/DeliveryChange.module.scss
+++ b/src/components/OrderPage/Delivery/DeliveryChange/DeliveryChange.module.scss
@@ -14,6 +14,8 @@
 
     .input__group {
         position: relative;
+        display: flex;
+        flex-direction: column;
     
         .input {
             width: 413px;
