add: useContext, button component, constants file

--- a/src/common/Title/Title.module.css
+++ b/src/common/Title/Title.module.css
@@ -10,6 +10,7 @@
     font-weight: 700;
     color: #fff;
     position: relative;
+    text-transform: uppercase;
 }
 
 .productsItems__title::before {
