--- a/src/components/Home/Products/ProductsItems/Product/Product.module.scss
+++ b/src/components/Home/Products/ProductsItems/Product/Product.module.scss
@@ -4,6 +4,12 @@
     padding: 30px 0;
 }
 
+@media(max-width: 1260px) {
+    .page__container {
+        margin: 0px 10px;
+    }
+}
+
 .backContainer {
     display: flex;
     align-items: center;
@@ -54,6 +60,7 @@
     background: linear-gradient(90deg, #494544 0%, #504B4A 100%);
     border-radius: 10px;
 
+
     .product__imageBlock {
         width: 600px;
         height: 100%;
@@ -63,6 +70,8 @@
             height: 100%;
             border-radius: 10px 0px 0px 10px;
         }
+
+     
     }
 
     .product__container {
@@ -70,12 +79,13 @@
         flex-direction: column;
         justify-content: space-between;
         position: relative;
+        padding: 36px 25px 25px 50px;
 
         .product__titleContainer {
             display: flex;
             flex-direction: column;
             justify-content: space-between;
-            padding: 36px 0 0 50px;
+          
             gap: 5px;
 
             .product__title {
@@ -90,14 +100,22 @@
                 color: #CFCFCF;
                 font-size: 14px;
             }
+
+            @media(max-width:790px) {
+                .product__description {
+                    width: 100%;
+                }     
+            }
         }
 
         .orderInfo {
             display: flex;
             flex-direction: column;
             .buyContainer {
-                padding-left: 50px;
-                width: 270px;
+                width: 230px;
+                display: flex;
+                flex-direction: column;
+                gap: 15px;
 
                 .cartCount {
                     top: -20px;
@@ -114,7 +132,6 @@
             .product__composition {
                 margin-top: 20px;
                 display: flex;
-                padding: 0px 0px 25px 50px;
                 gap: 50px;
                 font-size: 13px;
 
@@ -130,6 +147,55 @@
                     }
                 }
             }
+            @media(max-width: 419px) {
+                .product__composition {
+                    gap: 25px;
+                    flex-wrap: wrap;
+                }
+            }
         }
     }
+    @media(max-width: 910px) {
+        .product__container {
+            padding: 15px 10px 10px 20px;
+        }
+    } 
 }
+
+@media(max-width: 1043px) {
+    .product {
+        height: auto;
+    }
+} 
+
+// @media(max-width: 940px) {
+//     .product {
+//         height: 300px;
+//     }
+// } 
+
+// @media(max-width:820px) {
+//     .product {
+//         height: 270px;
+//     }
+// } 
+
+@media(max-width:790px) {
+    .product {
+        height: auto;
+        flex-direction: column;
+        margin: 0 auto;
+        width: 95%;
+
+        .product__imageBlock {
+            width: 100%;
+            .image {
+               
+            }
+        }
+
+        .product__container {
+            padding: 25px;
+        }
+    }
+} 
