--- a/src/components/CartMain/Cart.module.css
+++ b/src/components/CartMain/Cart.module.css
@@ -1,1 +1,152 @@
+.basketContainer {
+    padding: 50px 0px;
+    max-width: 1096px;
+    margin: 0 auto;
+}
 
+.basket {
+    max-width: 1096px;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 40px;
+}
+
+.basket__product {
+    height: 126px;
+    margin: 15px 0;
+    box-shadow: 0px 20px 15px rgba(43, 40, 40, 0.6);
+    background: linear-gradient(90deg, #494544 0%, #504B4A 100%);
+    border-radius: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 19px 42px 19px 19px;
+}
+
+.product__info {
+    display: flex;
+    gap: 39px;
+} 
+
+.product__image {
+    width: 117px;
+    height: 86px;
+}
+
+.product__infoText {
+    display: flex;
+    flex-direction: column;
+    color: #fff;
+    width: 259px;
+    gap: 10px;
+}
+
+.product__title {
+    font-size: 20px;
+    font-weight: 700;
+}
+
+.product__text {
+    font-size: 12px;
+    color:#A6A7AB;
+
+}
+
+.product__orderInfo {
+    width: 360px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    color: #fff;
+    position: relative;
+}
+
+.cartCount {    
+    display: none !important;
+}
+
+
+.product__price {
+    font-weight: 700;
+    font-size: 20px;
+    margin: 0 10px;
+    width: 65px;
+}
+
+.product__removeFromBasketButton {
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    font-weight: 700;
+}
+
+.changeCountButton {
+    width: 30px !important;
+    height: 30px !important;
+    padding: 10px;
+    border-radius: 50%;
+    margin: 0 10px;
+}
+
+@media(max-width: 1126px) {
+    .basket {
+        margin: 40px 10px;
+    }
+}   
+
+@media(max-width: 688px) {
+
+    .product__infoText {
+       justify-content: center;
+       width:130px;
+    }
+    
+   .product__text {
+        display: none;
+   }
+
+   .product__orderInfo {
+        width: 460px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        color: #fff;
+    } 
+ 
+} 
+
+
+@media(max-width: 616px) {
+    .basket__product {
+        flex-direction: column;
+        height: auto;
+        gap: 20px;
+    }
+
+    .product__text {
+        display: block;
+    }
+
+    .product__infoText {
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+        align-items: center;
+    }
+
+    .product__orderInfo {
+        width: 100%;
+    }
+ 
+} 
+
+
+@media(max-width: 616px) {
+    .product__text {
+        display: none;
+    }
+    .product__orderInfo {
+        width: 100%;
+    }
+ 
+} 
