--- a/src/components/Header/Contact/Contact.module.css
+++ b/src/components/Header/Contact/Contact.module.css
@@ -1,5 +1,4 @@
 .contactBlock {
-    width: 145px;
     display: flex;
     gap: 15px;
 }
@@ -18,6 +17,7 @@
     display: flex;
     flex-direction: column;
     gap: 5px;
+    letter-spacing: 1.2px;
 }
 
 .contactBlock__title {
@@ -33,7 +33,6 @@
 
 @media (max-width: 843px) {
     .contactBlock {
-        width: 180px;
         display: flex;
         gap: 15px;
     }
