fix: replace vanile redux with redux toolkit

--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,7 @@ html, body{
     font-family: 'Gilroy', sans-serif;
     font-size: 18px;
     font-weight: 400;
+    background-color: #353231;
 }
 
 h1 {
