--- a/src/components/Header/Burger/Burger.css
+++ b/src/components/Header/Burger/Burger.css
@@ -15,7 +15,7 @@
     left: 0;
     width: 100%;
     height: 2px;
-    background-color: #72A479;
+    background-color:#65906C;
     transition: .3s;
 }
 
@@ -26,13 +26,13 @@
     left: 0;
     width: 100%;
     height: 2px;
-    background-color: #72A479;
+    background-color:#65906C;
     transition: .3s;
 }
 
 .burgerCenter {
     position: absolute;
-    background-color: #72A479;
+    background-color:#65906C;
     height: 2px;
     width: 100%;
     top: 12px;
