add: top space in product page

--- a/src/components/Home/Products/ProductsItems/Product/Product.module.scss
+++ b/src/components/Home/Products/ProductsItems/Product/Product.module.scss
@@ -184,7 +184,7 @@
     .product {
         height: auto;
         flex-direction: column;
-        margin: 0 auto;
+        margin: 25px auto;
         width: 95%;
 
         .product__imageBlock {
